<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ReserveFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/cannot_reserve_textview"
        android:textColor="@color/colorAccent"
        app:drawableTint="@color/quantum_googred"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="gone"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:text="This restaurant does not allow reservations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@android:drawable/stat_notify_error" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_reserve_main_layout"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/number_of_people_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Number of people"
            android:layout_margin="5dp"
            android:textColor="@color/colorAccent"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/number_of_people_recyclerview"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_of_people_label"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/available_date_label"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="Reservation date:"
            android:visibility="visible"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_of_people_recyclerview"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/available_date_recyclerview"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/available_date_label"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/available_times_label"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="Reservation time:"
            android:visibility="visible"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/available_date_recyclerview"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/available_times_recyclerview"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/available_times_label"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/reserve_now_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginBottom="10dp"
            android:text="Reserve now"
            app:layout_constraintTop_toBottomOf="@id/available_times_recyclerview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
