...
            <ImageView
                android:id="@+id/restaurant_details_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintBottom_toTopOf="@id/restaurant_details_tab_layout"
                app:layout_constraintEnd_toStartOf="@id/restaurant_details_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.214" />

            <TextView
...
